hack time - winner

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skye Harvey - Digital Project Manager</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./versionControl.js" defer></script>
+    <script src="versionControl.js" defer></script>
 </head>
 <body>
     <header>
@@ -15,7 +15,8 @@
         </div>
         <div class="buttons">
             <button id="login-btn">Skye's Login</button>
-            <button id="commit-btn" style="display: none;">Commit Changes</button>
+            <button id="save-btn" style="display: none;">Save Changes</button>
+            <button id="logout-btn" style="display: none;">Logout</button>
             <button id="undo-btn" style="display: none;">Undo</button>
             <button id="redo-btn" style="display: none;">Redo</button>
         </div>
